cluster/homelab/configs/reverse-proxy/homeassistant.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-ingress
  namespace: reverse-proxy
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/secure-backends: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: external-nginx
  rules:
    - host: homeassistant.hyde.services
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeassistant
                port:
                  number: 8123
    - host: hass.hyde.services
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeassistant
                port:
                  number: 8123
  tls:
    - hosts:
        - homeassistant.hyde.services
        - hass.hyde.services
      secretName: wildcard.hyde.services
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: reverse-proxy
spec:
  type: ExternalName
  externalName: 192.168.2.2
  ports:
    - port: 8123
      targetPort: 8123
      protocol: TCP
